@@ -1,4 +1,8 @@
- $Id: ChangeLog,v 1.20 2004/03/10 02:07:00 mkern Exp $
+ $Id: ChangeLog,v 1.21 2004/03/11 12:05:48 mkern Exp $
+
+2004-03-11  Markus Kern <mkern@users.berlios.de>
+
+	* Periodically ping supernode and disconnect after timeout.
 
 2004-03-09  Markus Kern <mkern@users.berlios.de>
 
